# courseProjectIPS2021

./: CMakeLists.txt  Game.cpp  Game.h  Menu.cpp  Menu.h  PickUps.cpp  PickUps.h  Player.cpp  Player.h  README.md  main.cpp  obstacles.cpp  obstacles.h
